--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -30,18 +30,17 @@
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
-    # Add more env vars here
-      NODE_ENV: "{{ lookup('env','NODE_ENV') }}"
-      VERSION: "{{ lookup('env','VERSION') }}"
-      ENVIRONMENT: "{{ lookup('env','ENVIRONMENT') }}" 
-      TYPEORM_CONNECTION: "{{ lookup('env','TYPEORM_CONNECTION') }}"
-      TYPEORM_HOST: "{{ lookup('env','TYPEORM_HOST') }}"
-      TYPEORM_USERNAME: "{{ lookup('env','TYPEORM_USERNAME') }}"
-      TYPEORM_PASSWORD: "{{ lookup('env','TYPEORM_PASSWORD') }}"
-      TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
-      TYPEORM_PORT: "{{ lookup('env','TYPEORM_PORT') }}"
-      TYPEORM_ENTITIES: "{{ lookup('env','TYPEORM_ENTITIES') }}"
-      
+      ENVIRONMENT: production
+      TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
+      TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
+      TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
+      TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT')}}"
+      TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
+      TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
+      TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
+      TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
+      TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
+        
   roles:
     # Your code here
     - configure-prometheus-node-exporter
